Gpencil fill tool doesn't work when GPU Backend set to metal #107766

Closed
opened 2023-05-09 01:16:36 +02:00 by yoozco · 3 comments

System Information
Operating system: macOS-13.3.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Apple 4.1 Metal - 83.1

Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3
Worked: (newest version of Blender that worked as expected)

Short description of error
Gpencil fill tool doesn't work when GPU Backend set to metal, openGL works fine.

Exact steps for others to reproduce the error
Draw closed shape, try to use fill tool when GPU Backend is set to metal.

**System Information** Operating system: macOS-13.3.1-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Apple 4.1 Metal - 83.1 **Blender Version** Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: `e1ccd9d4a1d3` Worked: (newest version of Blender that worked as expected) **Short description of error** Gpencil fill tool doesn't work when GPU Backend set to metal, openGL works fine. **Exact steps for others to reproduce the error** Draw closed shape, try to use fill tool when GPU Backend is set to metal.
yoozco added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-05-09 01:16:36 +02:00
YimingWu added the
Platform
macOS
Interest
Metal
labels 2023-05-09 06:36:14 +02:00
Member
cc @Michael-Parkin-White-Apple

Hmm, I believe this was previously fixed prior to 3.5 release, but going to sanity check whether the PR actually landed, or if this is a different manifestation of a similar problem. Original PR: #106857

It looks like it did make it into the 3.5.1 release

I'll see if I can reproduce here. Though to sanity check, would it be possible to see whether this occurs in 3.6 Beta/4.0?

Thanks!

Hmm, I believe this was previously fixed prior to 3.5 release, but going to sanity check whether the PR actually landed, or if this is a different manifestation of a similar problem. Original PR: https://projects.blender.org/blender/blender/pulls/106857 It looks like it did make it into the 3.5.1 release I'll see if I can reproduce here. Though to sanity check, would it be possible to see whether this occurs in 3.6 Beta/4.0? Thanks!

This appears to be occurring due to the GPUFrameBuffer returned by the GPUOffScreen in GPU_offscreen_read_color_region is NULL. (Called by gpencil_do_frame_fill).

Looking into why this may be the case.

This appears to be occurring due to the GPUFrameBuffer returned by the GPUOffScreen in `GPU_offscreen_read_color_region` is NULL. (Called by gpencil_do_frame_fill). Looking into why this may be the case.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-01 15:44:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107766
No description provided.